<resources>
    <string name="app_name">Vendas</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_email">Email</string>
    <string name="contentDescription">Logo da empresa</string>
    <string name="bt_sigin">Sing In</string>
    <string name="bt_sigup">Sing Up</string>
    <string name="password_fail">Senha não cadastrada.</string>
    <string name="email_fail">Email não cadastrado.</string>
    <string name="email_already">Email já cadastrado.</string>
    <string name="signup_fail">Sign UP falhou. A internet está conectada?</string>
    <string name="hint_estoque">Estoque</string>
    <string name="hint_nome">Nome</string>
    <string name="content_description_foto_produto">Foto do Produto</string>
    <string name="hint_valor">Valor</string>
    <string name="hint_cpf">CPF</string>
    <string name="menu_nav_carrinho">Carrinho</string>
    <string name="menu_nav_lista_de_clientes">Lista de Clientes</string>
    <string name="menu_nav_produto_admin">Produtos</string>
    <string name="menu_nav_cliente_admin">Clientes</string>
    <string name="menu_nav_sobre">Sobre</string>
    <string name="menu_nav_sair">Sair</string>
    <string name="action_settings">configurações</string>
    <string name="menu_vender">Menu de Vendas</string>
    <string name="menu_cancelar">Cancelar</string>
    <string name="menu_pesquisar">Pesquisar</string>
    <string name="title_menu_lercodigodebarras">Codigo de Barras</string>
    <string name="hint_nome_searchview">Procurar...</string>
    <string name="foto_do_produto">Foto Produto</string>
    <string name="hint_valor_produto">Valor</string>
    <string name="hint_estoque_produto">Estoque</string>
    <string name="hint_nome_produto">Nome produto</string>
    <string name="bt_vender">Vender</string>
    <string name="hint_descricao_produto">Descrição do produto</string>
    <string name="hint_quantos">Quantidade</string>
    <string name="hint_vendedor">Nome Vendedor</string>
    <string name="label_estoque">R$</string>
    <string name="toast_adicionado_ao_carrinho">Produto adicionado com sucesso</string>
    <string name="barcode_error">Error reading barcode: %1$s</string>
    <string name="permission_camera_rationale">Acesso a camera é necessario</string>
    <string name="low_storage_error">As dependências do detector de face não podem ser baixadas devido ao baixo armazenamento do dispositivo</string>
    <string name="ok">OK</string>
    <string name="no_camera_permission">Este aplicativo não pode ser executado porque não possui a permissão da câmera. O aplicativo será encerrado agora.</string>
    <string name="title_selecionar_cliente">Confirma este cliente</string>
    <string name="message_nome_cliente">Nome:</string>
    <string name="message_cpf_cliente">CPF:</string>
    <string name="alertdialog_sim">Sim</string>
    <string name="toast_cliente_selecionado">Cliente Selecionado</string>
    <string name="alertdialog_nao">Não</string>
    <string name="snack_operacao_cancelada">Operação Cancelada</string>
    <string name="title_confimar">Confirmação</string>
    <string name="message_confirma_cancelar">Você tem certeza que deseja cancelar a compra?</string>
    <string name="message_confirma_sair">Você tem certeza que deseja sair? O seu pedido será cancelado</string>
    <string name="message_confirma_salvar">Você deseja finalizar o pedido?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="carrinho_vazio">Você não possui nenhum produto, que possa ser salvo</string>
    <string name="mensagens_edita">Você tem certeza que deseja editar esse item?</string>
    <string name="mensagem_exclui">Você tem certeza que deseja excluir esse item?</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="titulo_janela_galeria_imagens">Selecione uma imagem</string>
    <string name="snack_preencher_todos_campos">Todos os campos devem ser preenchidos.</string>
    <string name="toast_foto_produto_upload_fail">A foto do produto não foi salva.</string>
    <string name="toast_foto_cliente_upload_fail">A foto do cliente não foi salva.</string>
    <string name="toast_codigo_barras_ja_cadastrado">Código de barras já cadastrado.</string>
    <string name="toast_produto_salvo">Produto salvo.</string>
    <string name="toast_cliente_salvo">Cliente salvo.</string>
    <string name="snack_operacao_falhou">Operação falhou.</string>
    <string name="toast_produto_nao_cadastrado">Produto não cadastrado.</string>
    <string name="toast_cliente_nao_cadastrado">Cliente não cadastrado.</string>
    <string name="message_processando">Processando ...</string>
    <string name="label_codigo_de_barras">Código De Barras</string>
    <string name="hint_codigo_de_barras">Utilize o leitor ou digite</string>
    <string name="label_nome">Nome:</string>
    <string name="label_descricao">Descrição</string>
    <string name="label_valor">Valor:</string>
    <string name="hint_digite_valor">Digite o valor</string>
    <string name="label_quantidade">Quantidade:</string>
    <string name="hint_quantidade_digite">Digite a quantidade</string>
    <string name="titulo_tela_produto_administracao">Produto (administração)</string>
    <string name="bt_salvar">Salvar</string>
    <string name="toast_problemas_signin">Problemas no signIn.</string>
    <string name="input_error_invalido">Erro input</string>
    <string name="snack_insira_email">Insira um E-mail</string>
    <string name="esqueceu_senha_tela_login">Esqueceu a senha?</string>
    <string name="menu_nav_usuario_admin">Usuário</string>
    <string name="hint_sobrenome">Sobrenome</string>
    <string name="btCadastrarUser">Cadastrar</string>
    <string name="tv_funcao">Função</string>
    <string name="tv_sobre">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vulputate est vitae elit dictum, nec condimentum ligula suscipit. Morbi volutpat vestibulum diam at commodo. Curabitur quis ante urna. Suspendisse leo eros, vulputate at lacus id, vestibulum ornare augue. In mauris sapien, feugiat nec consequat a, varius eu justo. Sed congue lobortis libero, auctor auctor purus dictum sed. Aenean elementum dui at ligula venenatis hendrerit. Duis erat odio, aliquam eu consectetur sed, convallis sit amet lacus. Donec tempor turpis ac ullamcorper eleifend. Nullam viverra nunc vitae congue consectetur. Ut lectus dui, tempus sit amet suscipit nec, scelerisque fringilla erat. Nulla accumsan arcu vitae magna ullamcorper, nec vestibulum nunc fringilla. Vestibulum mattis ac nisi at gravida. Praesent vitae diam ac nulla pharetra consectetur tempor eu odio. Sed convallis volutpat ligula in congue.</string>
    <string name="bt_ver_pedidos">Pedidos</string>
</resources>
