<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/contentDescription"
        android:soundEffectsEnabled="false"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColorLink="@color/colorPrimary"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"
        android:textColorLink="@color/colorPrimary"
        android:textSize="16sp" />

    <Button
        android:id="@+id/bt_sigin"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSenha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/bt_sigin"
        android:textColor="@color/fontColor"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/pb_login"
        android:layout_width="258dp"
        android:layout_height="256dp"
        android:layout_centerInParent="true"
        android:progressDrawable="@color/colorAccent"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvEsqueceuSenha_tela_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_sigin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/esqueceu_senha_tela_login"
        android:textColor="@color/colorPrimaryDark" />

</RelativeLayout>