<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ClienteAdminActivity"
    android:id="@+id/container_activity_cliente_admin">

<android.support.v4.widget.NestedScrollView
    android:id="@+id/nestedScrollView"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imvFoto"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/foto_do_produto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_cliente_icon_524x524" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_codigo_de_barras"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imvFoto" />

        <EditText
            android:id="@+id/etCodigoCliente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:ems="10"
            android:hint="@string/hint_codigo_de_barras"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/imb_pesquisar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_nome"
            app:layout_constraintStart_toStartOf="@+id/etCodigoCliente"
            app:layout_constraintTop_toBottomOf="@+id/etCodigoCliente" />

        <EditText
            android:id="@+id/etNomeClienteAdmin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/hint_nome"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hint_cpf"
            app:layout_constraintStart_toStartOf="@+id/etNomeClienteAdmin"
            app:layout_constraintTop_toBottomOf="@+id/etSobrenomeClienteAdmin" />

        <EditText
            android:id="@+id/etCPFClienteAdmin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/hint_cpf"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/btInserirClienteAdmin"
            android:layout_width="142dp"
            android:layout_height="57dp"
            android:layout_marginTop="32dp"
            android:background="@color/colorAccent"
            android:text="@string/bt_salvar"
            android:textColor="@color/fontColor"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCPFClienteAdmin" />

        <ImageButton
            android:id="@+id/imb_pesquisar"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/menu_pesquisar"
            app:layout_constraintBottom_toBottomOf="@+id/etCodigoCliente"
            app:layout_constraintEnd_toEndOf="@+id/etNomeClienteAdmin"
            app:layout_constraintStart_toEndOf="@+id/etCodigoCliente"
            app:layout_constraintTop_toTopOf="@+id/etCodigoCliente"
            app:srcCompat="@drawable/ic_search_white_24dp" />

        <ProgressBar
            android:id="@+id/pb_foto_cliente_admin"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/imvFoto"
            app:layout_constraintEnd_toEndOf="@+id/imvFoto"
            app:layout_constraintStart_toStartOf="@+id/imvFoto"
            app:layout_constraintTop_toTopOf="@+id/imvFoto" />

        <EditText
            android:id="@+id/etSobrenomeClienteAdmin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/hint_sobrenome"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hint_sobrenome"
            app:layout_constraintStart_toStartOf="@+id/etNomeClienteAdmin"
            app:layout_constraintTop_toBottomOf="@+id/etNomeClienteAdmin" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>